<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">App Doctor</string>
    <string name="hello_world">oops</string>
    <string name="action_settings">Settings</string>
    <string name="symptoms">symptoms</string>
    <string name="diseases">diseases</string>
    <string name="medicines">medicines</string>
    <string name="health_news">health news</string>
    <string name="about_us">Know me</string>
    <string name="welcome">welcome</string>
    <string name="title_activity_symptoms">Symptoms</string>
    <string name="title_activity_diseases">Diseases</string>
    <string name="title_activity_medicines">Medicines</string>
    <string name="title_activity_health_news">Health News</string>
    <string name="title_activity_about_me">About Me</string>
    <string name="az_appkey">0f8102b5c2d1600d6da603018352ae60</string>
    <string name="Headache">Headache</string>
    <string name="details_alarm_tone">Notification Tone</string>
    <string name="details_alarm_tone_default">Select a notification tone</string>
    <string name="title_activity_sub_painkiller">Painkiller Medicines</string>
    <string name="title_activity_sub_antibiotic">Antibiotic Medicines</string>
    <string name="title_activity_sub_antihistamine">Antihistamine Medicines</string>
    <string name="title_activity_inspirational_quotes">Inspirational Quotes</string>
    <string name="title_activity_set_notification">Your daily Quote:)</string>
    <string name="inspirational_quotes">Inspirational Quotes</string>
    <string name="getQuotes">Get your daily quotes</string>
    <string name="coffee">Connect with me:)</string>
    <string name="title_activity_account_no">Connect with me:)</string>
    <string name="done">done</string>
    <string name="title_activity_result_evaluate">ResultEvaluate</string>
    <string name="title_activity_disease_explanation">Disease Description</string>
    <string name="title_activity_sub_antiinflamatory">Antiinflamatory medicines</string>
    <string name="HighFever">high fever</string>
    <string name="MildFever">mild fever</string>
    <string name="Chills">chills</string>
    <string name="NausiaVomit">nausia and vomitting</string>
    <string name="SevereCough">severe cough</string>
    <string name="MildCough">mild cough</string>
    <string name="Fatigue">fatigue(tiredness)</string>
    <string name="ache">aches and pains in arms and legs</string>
    <string name="JointPain">joint pain</string>
    <string name="SkinRash">skin rash</string>
    <string name="EyePain">eye pain</string>
    <string name="apetite">loss of apetite</string>
    <string name="weightLoss">weight loss</string>
    <string name="ChestPain">chest pain</string>
    <string name="ShortBreath">shortness of breath</string>
    <string name="SoreThroat">sore throat</string>
    <string name="RunnyNose">runny nose</string>
    <string name="swallow">difficulty swallowing</string>
    <string name="LowBP">low blood pressure</string>
    <string name="HighBP">high blood pressure</string>
    <string name="stiffness">stiffness in arms, legs and neck</string>
    <string name="muscleCramp">muscle cramps</string>
    <string name="dizziness">dizziness</string>
    <string name="lightheadedness">lightheadedness</string>
    <string name="backPain">back pain</string>
    <string name="heartRate">rapid heart rate</string>
    <string name="dryskin">scale dry skin</string>
    <string name="weightGain">weight gain</string>
    <string name="swollenLeg">swollen legs and feat</string>
    <string name="MemoryProblem">memory problems</string>
    <string name="diarrhea">diarrhea</string>
    <string name="bluishSkin">bluish skin</string>
    <string name="drooling">drooling</string>
    <string name="swollenEyelids">swollen eyelids</string>
    <string name="redRash">bright red rash</string>
    <string name="paleTongue">pale tongue with red spots</string>
    <string name="swollenGums">swollen spongy purplish gums</string>
    <string name="looseTeeth">loose teeth</string>
    <string name="mouthSore">mouth sores and blisters</string>
    <string name="jaundice">jaundice</string>
    <string name="hepatitis">hepatitis</string>
    <string name="yellowSkin">yellow discoloration of skin</string>
    <string name="LightStools">light coloured stools</string>
    <string name="darkUrine">dark coloured urine</string>
    <string name="spotRash">spots(rash)</string>
    <string name="skinBleeding">bleeding in skin</string>
    <string name="coughBlood">coughing up blood</string>
    <string name="brightLights">discomfort in bright lights</string>
    <string name="skinMole">growing mole on skin</string>
    <string name="diffUrination">difficulty in Urination</string>
    <string name="bloodUrine">blood in urine</string>
    <string name="coordProb">coordination problems</string>
    <string name="pelvicPain">pelvic pain</string>
    <string name="raceBeat">racing or slow heart beat</string>
    <string name="suddenNumb">sudden numbness of face leg or arm</string>
    <string name="suddenConf">sudden confusion or trouble while walking or speaking</string>
    <string name="paralysis">paralysis on face /arm /legs /one side of the body</string>
    <string name="doubleVision">double vision</string>
    <string name="lossBladd">loss of bladder/ bowl control</string>
    <string name="yourquote">Your quote for today is</string>
    <string name="niceday">have a nice day!</string>
    <string name="Default">Default</string>
    <string name="ZeroZero">00:00</string>
    <string name="S">S</string>
    <string name="M">M</string>
    <string name="T">T</string>
    <string name="W">W</string>
    <string name="F">F</string>
    <string name="ToggleButton">ToggleButton</string>
    <string name="ViewTime">View Time</string>
    <string name="donate">donate</string>
    <string name="fb">fb</string>
    <string name="googleplus">googleplus</string>
    <string name="linkedin">linkedin</string>
    <string name="twitter">twitter</string>
    <string name="save">save</string>
    <string name="always">always</string>

</resources>
