<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/notifyback"
    android:orientation="vertical"
    tools:context="com.trigg.alarmclock.SetNotification"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:id="@+id/dquote1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yourquote"
        android:textSize="@dimen/quoteValue" />

    <TextView
        android:id="@+id/dquote2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:textSize="@dimen/quoteValue" />

    <TextView
        android:id="@+id/dquote3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/niceday"
        android:textSize="@dimen/quoteValue" />

</LinearLayout>
